adding promo banner edit option
